...
                />
                <FAB
                    icon="account-plus-outline"
                    customSize={64}
                    style={styles.fab}
                    onPress={() => navigation.navigate('PersonFormScreen', {})}
                    testID="add-person-fab"
                />
            </View>
        </TouchableWithoutFeedback>
    );
};

...
